fix: shift function

--- a/style.scss
+++ b/style.scss
@@ -97,5 +97,5 @@ textarea {
   background-color: #fcc456;
   box-shadow: 10px 8px 5px #fcc456;
   border-radius: 45%;
-  transition: border-radius 0.1s #444444;
+  transition: border-radius 0.5s #444444;
 }
